[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nethang"
version = "0.1.5"
description = "A web-based tool for simulating network quality"
readme = "README.md"
authors = [
    {name = "Hang Yin", email = "stephen.yin.h@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "Flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "python-dotenv>=0.10.0",
    "Werkzeug>=3.0.0",
    "pyyaml>=5.0.0",
    "netifaces>=0.10.0",
    "tomli>=2.0.0",
    "requests>=2.0.0",
]

[project.scripts]
nethang = "run:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/stephenyin/NetHang"
Repository = "https://github.com/stephenyin/NetHang.git"

[tool.setuptools]
packages = ["nethang"]
package-dir = {"" = "."}
py-modules = ["run"]
include-package-data = true

[tool.setuptools.package-data]
nethang = ["templates/*", "static/*", "static/**/*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nethang --cov-report=term-missing"